--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/react-hooks": "3.1.5",
+    "@apollo/react-ssr": "3.1.5",
+    "apollo-boost": "0.4.7",
+    "graphql": "15.0.0",
     "next": "^10.0.3",
+    "next-apollo": "3.1.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "styled-components": "5.0.0",
