--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@apollo/react-hooks": "3.1.5",
     "@apollo/react-ssr": "3.1.5",
     "apollo-boost": "0.4.7",
+    "axios": "^0.21.0",
     "graphql": "15.0.0",
     "next": "^10.0.3",
     "next-apollo": "3.1.10",
