--- a/backend/api/clients/models/clients.settings.json
+++ b/backend/api/clients/models/clients.settings.json
@@ -20,7 +20,7 @@
       "type": "string"
     },
     "addresses": {
-      "via": "clients",
+      "via": "client",
       "collection": "address"
     }
   }
