--- a/backend/api/clients/models/clients.settings.json
+++ b/backend/api/clients/models/clients.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "clients",
   "info": {
-    "name": "clients"
+    "name": "clients",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -20,7 +21,6 @@
       "type": "string"
     },
     "addresses": {
-      "via": "client",
       "collection": "address"
     }
   }
