--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,14 @@
     "apollo-boost": "0.4.7",
     "axios": "^0.21.0",
     "graphql": "15.0.0",
+    "isomorphic-fetch": "2.2.1",
+    "js-cookie": "2.2.1",
     "next": "^10.0.3",
     "next-apollo": "3.1.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.1",
     "styled-components": "5.0.0",
     "styled-reset": "^4.3.3"
   },
