--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,11 +6,12 @@
     "start": "next start"
   },
   "dependencies": {
-    "@apollo/react-hooks": "3.1.5",
+    "@apollo/client": "^3.3.6",
+    "@apollo/react-hooks": "^4.0.0",
     "@apollo/react-ssr": "3.1.5",
     "apollo-boost": "0.4.7",
     "axios": "^0.21.0",
-    "graphql": "15.0.0",
+    "graphql": "^15.0.0",
     "isomorphic-fetch": "2.2.1",
     "js-cookie": "2.2.1",
     "next": "^10.0.3",
