--- a/backend/api/clients/models/clients.settings.json
+++ b/backend/api/clients/models/clients.settings.json
@@ -20,8 +20,8 @@
     "phone": {
       "type": "string"
     },
-    "addresses": {
-      "collection": "address"
+    "address": {
+      "model": "address"
     }
   }
 }
