--- a/backend/api/clients/models/clients.settings.json
+++ b/backend/api/clients/models/clients.settings.json
@@ -21,7 +21,8 @@
       "type": "string"
     },
     "address": {
-      "model": "address"
+      "via": "client",
+      "model": "addresses"
     }
   }
 }
